k8s/manifest/production/wrapper/textscope/templates/service.yaml
---
# Source: textscope/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrapper-textscope
  labels:
    helm.sh/chart: textscope-0.1.0
    app.kubernetes.io/name: textscope
    app.kubernetes.io/instance: wrapper
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: textscope
    app.kubernetes.io/instance: wrapper
